ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-markt
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: markt.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8080
      - path: /(api|sanctum|auth|user)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080
